added social media links to the nav bar

--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
     position: fixed;
     top: 0;
     width:100%;
+    z-index:1;
+}
+
+.social{
+    margin: 15px;
 }
 
 body {
@@ -67,7 +72,7 @@ article{
 
 
 
-footer{
+ footer{ 
     position: fixed;
     bottom: 0;
     height: 20px;
